--- a/AndroidStudioProjects/TerrGym80/app/build.gradle
+++ b/AndroidStudioProjects/TerrGym80/app/build.gradle
@@ -29,7 +29,11 @@ android {
 }
 
 dependencies {
-
+    //http서비스를 백그라운드에서 지원해줄 의존성 주입 volley
+    implementation 'com.android.volley:volley:1.2.0'
+    //json활용을 위한 의존성 주입 Gson
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
