07/08 파프리카 앱내부에 웹사이트

--- a/AndroidStudioProjects/KOSMO_ERP80/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/KOSMO_ERP80/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.KOSMO_ERP80"
         android:usesCleartextTraffic="true">
         <activity android:name=".ResMakeActivity"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"/>
+            <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
