--- a/AndroidStudioProjects/Lotto80/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/Lotto80/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lotto80">
+        android:theme="@style/Theme.Lotto80"
+        android:name=".LottoApplication">
         <activity android:name=".MainActivity4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
